--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -1,10 +1,11 @@
 # DKMS configuration for the NVIDIA kernel module.  -*- sh -*-
 
 # The version is replaced at build time by dh_dkms invoked in debian/rules.
-PACKAGE_NAME="nvidia"
+PACKAGE_NAME="#MODULE#"
 PACKAGE_VERSION="#MODULE_VERSION#"
 
-BUILT_MODULE_NAME[0]="$PACKAGE_NAME"
+BUILT_MODULE_NAME[0]="nvidia"
+DEST_MODULE_NAME[0]="$PACKAGE_NAME"
 DEST_MODULE_LOCATION[0]="/updates/dkms"
 AUTOINSTALL=yes
 
