--- a/debian/control
+++ b/debian/control
@@ -437,8 +437,6 @@ Recommends:
  ${nvidia}-smi,
 Suggests:
  ${nvidia:kmod:source},
-Provides:
- libcuda1-i386 [i386],
 Conflicts:
  libcuda1-dev,
  libcuda1-ia32 [i386],
@@ -449,6 +447,7 @@ Replaces:
  nvidia-glx-dev (<< 185.18.14-2),
  libcuda1-dev,
 Provides:
+ libcuda1-i386 [i386],
  libcuda-5.0-1,
  libcuda-5.0-1-i386 [i386],
 Homepage: http://www.nvidia.com/CUDA
@@ -647,8 +646,13 @@ Description: NVIDIA OpenCL ICD Loader library
  general-purpose parallel programming of heterogeneous systems that include
  CPUs, GPUs and other processors.
  .
- This package contains the installable client driver loader (ICD Loader)
- library provided by NVIDIA.
+ The OpenCL installable client driver loader (ICD Loader) acts as a dispatcher
+ between an OpenCL application and one (or more) installable client drivers
+ (ICD) that can be from any vendor. At least one ICD (and the corresponding
+ hardware) is required to run OpenCL applications.
+ .
+ This package contains the ICD Loader library provided by NVIDIA. This library
+ supports OpenCL 1.1 only.
 
 Package: nvidia-libopencl1-ia32
 Section: non-free/oldlibs
