--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -6,6 +6,8 @@ export CCACHE_DISABLE := 1
 
 export NV_VERBOSE := 1
 
+MODULE_BASENAME	 = #MODULE#
+
 CFLAGS = -Wall -g
 ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
     CFLAGS += -O0
@@ -65,7 +67,9 @@ build-stamp: configure-stamp
 	dh_prep
 	dh_quilt_patch
 	unset ARCH; $(MAKE) modules $(KERNEL_SPEC)
-	test "#MODULE#" = "nvidia" || mv nvidia.ko #MODULE#.ko
+ifneq (nvidia,$(MODULE_BASENAME))
+	mv nvidia.ko $(MODULE_BASENAME).ko
+endif
 	touch $@
 
 get_built_using	?= $(filter-out (=),$(shell dpkg-query -f='$${source:Package} (=$${source:Version})' -W $1))
