--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -11,5 +11,6 @@ hardening-no-stackprotector
 # Use wildcard instead of exact substitution, this is a M-A: same package.
 embedded-library usr/lib*/libcuda.so.#VERSION#: zlib
 
-# libcudart.so.2 does dlopen("libcuda.so").
-non-dev-pkg-with-shlib-symlink
+# Lintian and debhelper disagree w.r.t a library in a private directory.
+postinst-has-useless-call-to-ldconfig
+postrm-has-useless-call-to-ldconfig
