--- a/debian/libgl1-nvidia-glx.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx.lintian-overrides.in
@@ -8,22 +8,11 @@ hardening-no-relro
 hardening-no-stackprotector
 
 # Packages built against the NVIDIA libGL should declare dependencies on
-# the free version for Debian's purposes.  Therefore we use a special
-# combination of shlibs files (for libGL.so.1) and symbols files (for all
-# other libraries).
-shlibs-declares-dependency-on-other-package libgl1-mesa-glx | libgl1
+# the free version for Debian's purposes.
+symbols-declares-dependency-on-other-package libgl1-mesa-glx
+symbols-declares-dependency-on-other-package libgl1
 
 # This package is a strange special case since it provides an alternative
 # implementation of libGL.so.1, so the package name won't ever be able to
 # match the library names it provides.
 package-name-doesnt-match-sonames
-
-# Ensure cleaner upgrades from some old versions to multiarch enabled
-# packages.  dpkg might want to remove this directory too early, fails to
-# do so and forgets about it, leaving it unowned on the system.
-# Targets squeeze-backports and wheezy, can be removed after wheezy release.
-package-contains-empty-directory usr/lib/tls/
-
-# The legacy version is intended to be used with the legacy driver only.
-# Co-installability support is planned for jessie.
-breaks-without-version nvidia-settings-legacy-173xx
