--- a/debian/nvidia-opencl-icd.lintian-overrides.in
+++ b/debian/nvidia-opencl-icd.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [i386]: binary-file-built-without-LFS-support
-[!ppc64el]: shlib-with-executable-stack
+shlib-with-executable-stack
 spelling-error-in-binary
 unstripped-binary-or-object
 hardening-no-bindnow
@@ -8,5 +8,6 @@ hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
-# This library is only used indirectly via nvidia.icd.
-package-name-doesnt-match-sonames libnvidia-opencl1
+# Lintian and debhelper disagree w.r.t a library in a private directory.
+postinst-has-useless-call-to-ldconfig
+postrm-has-useless-call-to-ldconfig
