backport stretch-specific changes from branches/340-stretch
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@6399 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -41,14 +41,15 @@ Depends:
 Recommends:
  ${nvidia-settings},
  libgl1-${nvidia}-glx-i386 [amd64],
+ nvidia-persistenced,
 Suggests:
  ${nvidia:kmod:source},
 Provides:
  nvidia-glx-any,
 Breaks:
- nvidia-glx${nvidia:Legacy} (<< 304.88-4),
+ nvidia-glx${nvidia:Legacy},
 Replaces:
- nvidia-glx${nvidia:Legacy} (<< 304.88-4),
+ nvidia-glx${nvidia:Legacy},
 Description: NVIDIA metapackage${nvidia:LegacyDesc}
  This metapackage depends on the NVIDIA binary driver and libraries
  that provide optimized hardware acceleration of
@@ -90,18 +91,6 @@ Description: NVIDIA driver support binaries${nvidia:LegacyDesc}
  .
  This package contains supporting binaries for the driver.
 
-#Package: nvidia-glx${nvidia:Legacy}
-Package: nvidia-glx
-Section: non-free/oldlibs
-Priority: extra
-Architecture: i386 amd64
-Depends:
- ${nvidia}-driver,
- ${misc:Depends}
-Description: transition to ${nvidia}-driver
- This is a dummy transitional package to aid switching to
- ${nvidia}-driver.
-
 #Package: xserver-xorg-video-${nvidia}
 Package: xserver-xorg-video-nvidia
 Section: non-free/x11
@@ -125,6 +114,10 @@ Suggests:
 Provides:
  xserver-xorg-video-nvidia-any,
  ${nvidia:xorgProvides},
+Breaks:
+ glx-alternative-nvidia (<< 0.6.91),
+Replaces:
+ glx-alternative-nvidia (<< 0.6.91),
 Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
  These binary drivers provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
@@ -159,14 +152,6 @@ Provides:
  libgl1-nvidia-glx-${nvidia:Version},
 Conflicts:
  libgl1-nvidia-glx-${nvidia:Version},
- libgl1-nvidia${nvidia:Legacy}-glx-ia32,
- nvidia-glx${nvidia:Legacy}-ia32,
- libgl1-nvidia-glx-ia32-any,
-Breaks:
- ia32-libs (<< 1:0),
-Replaces:
- libgl1-nvidia${nvidia:Legacy}-glx-ia32,
- nvidia-glx${nvidia:Legacy}-ia32,
 Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
  These binary libraries provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
@@ -194,13 +179,8 @@ Multi-Arch: foreign
 Pre-Depends:
  ${nvidia:legacy-check},
 Depends:
- glx-alternative-nvidia (>= 0.4),
- nvidia-modprobe,
+ glx-alternative-nvidia (>= 0.7),
  ${misc:Depends}
-Conflicts:
- libgl1-nvidia-alternatives,
- libglx-nvidia-alternatives,
- libgl1-nvidia-alternatives-ia32,
 Breaks:
  nvidia-settings (<< 304.88-2),
  nvidia-settings-legacy-173xx (<< 173.14.37),
@@ -211,11 +191,37 @@ Description: allows the selection of NVIDIA as GLX provider
  legacy) this metapackage registers an alternative to allow easy switching
  between the different versions.
  .
- Use 'update-alternatives --config nvidia' to select a version.
+ Use 'update-glx --config nvidia' to select a version.
  .
  This package does not depend on the corresponding NVIDIA libraries.
  In order to install the NVIDIA driver and libraries, install the
  ${nvidia}-driver package instead.
+
+#Package: ${nvidia}-kernel-support
+Package: nvidia-kernel-support
+Section: non-free/kernel
+Architecture: i386 amd64 armhf
+Multi-Arch: foreign
+Depends:
+ ${nvidia}-alternative (= ${binary:Version}),
+ ${nvidia}-alternative--kmod-alias,
+ nvidia-kernel-common (>= 20151021),
+ nvidia-modprobe,
+ ${misc:Depends}
+Provides:
+ nvidia-kernel-support-any,
+ ${nvidia}-kernel-support--v1,
+Breaks:
+ glx-alternative-nvidia (<< 0.6.91),
+Replaces:
+ glx-alternative-nvidia (<< 0.6.91),
+Description: NVIDIA binary kernel module support files${nvidia:LegacyDesc}
+ The NVIDIA binary drivers provide optimized hardware acceleration of
+ OpenGL applications via a direct-rendering X Server for graphics cards
+ using NVIDIA chip sets.  AGP, PCIe, SLI, TV-out and flat panel displays
+ are also supported.
+ .
+ This package provides supporting configuration for the kernel module.
 
 #Package: ${nvidia}-kernel-dkms
 Package: nvidia-kernel-dkms
@@ -226,8 +232,7 @@ Pre-Depends:
  nvidia-installer-cleanup,
 Depends:
  dkms,
- nvidia-kernel-common (>= 20110213),
- ${nvidia}-alternative--kmod-alias,
+ ${nvidia}-kernel-support--v1,
  ${misc:Depends}
 Recommends:
  ${nvidia}-driver (>= ${nvidia:Version}) | ${libcuda1} (>= ${nvidia:Version}),
@@ -258,14 +263,13 @@ Section: non-free/kernel
 Architecture: i386 amd64
 Depends:
  debhelper (>= 9),
- make,
+ make:any,
  quilt,
  xz-utils,
  ${misc:Depends}
 Recommends:
  module-assistant | kernel-package,
- nvidia-kernel-common,
- ${nvidia}-alternative--kmod-alias,
+ ${nvidia}-kernel-support,
 Suggests:
  ${nvidia}-driver (>= ${nvidia:Version}),
 Breaks:
@@ -312,12 +316,6 @@ Enhances:
  libvdpau1,
 Provides:
  vdpau-driver,
-Conflicts:
- nvidia-vdpau-driver-ia32,
-Breaks:
- libvdpau1 (<< 0.4.1-3),
-Replaces:
- nvidia-vdpau-driver-ia32,
 Description: Video Decode and Presentation API for Unix - NVIDIA driver
  These libraries provide the Video Decode and Presentation API for Unix.
  They provide accelerated video playback (incl. H.264) for the supported
@@ -354,10 +352,6 @@ Section: non-free/utils
 Architecture: i386 amd64
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
-Conflicts:
- nvidia-cuda-proxy,
-Replaces:
- nvidia-cuda-proxy,
 Description: NVIDIA CUDA Multi Process Service (MPS)
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
@@ -384,16 +378,13 @@ Depends:
 Recommends:
  ${nvidia:kmod:binary},
  ${nvidia}-smi,
+ nvidia-persistenced,
  ${libcuda1}-i386 [amd64],
 Suggests:
  nvidia-cuda-mps,
  ${nvidia:kmod:source},
-Conflicts:
- libcuda1-ia32,
- nvidia-cuda-proxy,
-Replaces:
- libcuda1-ia32,
 Provides:
+ libcuda1-any,
  libcuda-5.0-1,
  libcuda-5.0-1-i386 [i386],
 Homepage: http://www.nvidia.com/CUDA
@@ -434,9 +425,6 @@ Provides:
  libnvidia-compiler-${nvidia:Version},
 Conflicts:
  libnvidia-compiler-${nvidia:Version},
- libnvidia-compiler-ia32,
-Replaces:
- libnvidia-compiler-ia32,
 Description: NVIDIA runtime compiler library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
@@ -511,10 +499,6 @@ Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Enhances:
  libopencl1,
-Conflicts:
- nvidia-opencl-icd-ia32,
-Replaces:
- nvidia-opencl-icd-ia32,
 Provides:
  opencl-icd,
 Description: NVIDIA OpenCL installable client driver (ICD)
@@ -539,12 +523,10 @@ Provides:
  libopencl-1.1-1,
 Conflicts:
  libopencl1,
- nvidia-libopencl1-ia32,
 Breaks:
  nvidia-opencl-dev (<= 5.0.35-6),
 Replaces:
  libopencl1,
- nvidia-libopencl1-ia32,
 Description: NVIDIA OpenCL ICD Loader library
  OpenCL (Open Computing Language) is a multivendor open standard for
  general-purpose parallel programming of heterogeneous systems that include
@@ -567,6 +549,6 @@ Depends:
 Description: NVIDIA GPU detection utility
  The 'nvidia-detect' script in this package checks for an NVIDIA GPU in the
  system and recommends one of the non-free accelerated driver meta-packages
- (nvidia-driver, nvidia-legacy-173xx-driver or nvidia-legacy-96xx-driver)
+ (nvidia-driver, nvidia-legacy-340xx-driver, or nvidia-legacy-304xx-driver)
  for installation.
 
