--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -2,7 +2,7 @@
 # Based on http://wiki.debian.org/NvidiaGraphicsDrivers?action=AttachFile&do=view&target=nvidia-versions.sh
 #
 # Copyright © 2008-2011 Filipus Klutiero <chealer@gmail.com>
-# Copyright © 2011-2014 Andreas Beckmann <anbe@debian.org>
+# Copyright © 2011-2016 Andreas Beckmann <anbe@debian.org>
 #
 # This package is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -19,7 +19,7 @@
 #
 
 if [ "$1" = "-h" -o "$1" = "--help" ]; then
-	echo "Usage: nvidia-detect [PCIID]"
+	echo "Usage: nvidia-detect [PCIID]..."
 	echo "       Reports the Debian packages supporting the NVIDIA GPU that is"
 	echo "       installed on the local system (or given as a PCIID parameter)."
 	exit 0
@@ -31,45 +31,12 @@ shopt -s compat31 nocasematch 2>/dev/null || { echo "Error: this script only wor
 LATEST="#VERSION#"
 PACKAGE=
 
-if [ -z "$1" ]; then
+NV_DETECT()
+{
 
-if ! (lspci --version) > /dev/null 2>&1; then
-	echo "ERROR: The 'lspci' command was not found. Please install the 'pciutils' package." >&2
-	exit 1
-fi
-
-NV_DEVICES=$(lspci -mn | awk '{ gsub("\"",""); if ($2 == "0300" && ($3 == "10de" || $3 == "12d2")) { print $1 } }')
-
-if [ -z "$NV_DEVICES" ]; then
-	echo "No NVIDIA GPU detected."
-	exit 0
-fi
-
-echo "Detected NVIDIA GPUs:"
-for d in $NV_DEVICES ; do
-	lspci -nn -s $d
-done
-
-if [ "$(echo $NV_DEVICES | wc -w)" != 1 ]; then
-	echo "Several NVIDIA GPUs detected. Checking only the first."
-fi
-
-NVGA=$(lspci -mn -s ${NV_DEVICES%% *} | awk '{ gsub("\"",""); print $3 $4 }')
-
-else
-
-	PCIID=$(echo "$1" | sed -rn 's/^(10de)?:?([0-9a-fA-F]{4})$/10de\2/ip')
-	if [ -z "$PCIID" ]; then
-		echo "Error parsing PCI ID '$1'."
-		exit 1
-	fi
-
-	echo "Checking driver support for PCI ID [$(echo $PCIID | sed -r 's/(....)(....)/\1:\2/')]"
-	NVGA="$PCIID"
-
-fi
-
+NVGA=$1
 IDLISTDIR=/usr/share/nvidia
+local VERSIONS
 
 if grep -q -i $NVGA $IDLISTDIR/nvidia-legacy-71xx.ids 2>/dev/null
 then
@@ -91,6 +58,11 @@ then
 	VERSIONS[304]=304.123
 fi
 
+if grep -q -i $NVGA $IDLISTDIR/nvidia-legacy-340xx.ids 2>/dev/null
+then
+	VERSIONS[340]=340.76
+fi
+
 if grep -q -i $NVGA $IDLISTDIR/nvidia.ids 2>/dev/null
 then
        	# 999 means current
@@ -102,7 +74,7 @@ if [[ ${#VERSIONS[*]} == 0 ]]; then
        	echo "Uh oh. Your card is not supported by any driver version up to $LATEST."
 	echo "A newer driver may add support for your card."
 	echo "Newer driver releases may be available in backports, unstable or experimental."
-	exit 0;
+	return
 fi
 
 	if grep -q "^4" /etc/debian_version
@@ -144,13 +116,17 @@ fi
 		fi;
 	elif grep -q "jessie\|^8" /etc/debian_version
 	then
-		if [[ -n ${VERSIONS[999]} ]]; then
+		if [[ -n ${VERSIONS[340]} ]]; then
 			if [[ -n ${VERSIONS[304]} ]]; then
 				echo "Your card is supported by the default drivers and legacy driver series 304."
 			else
 				echo "Your card is supported by the default drivers."
 			fi
 			PACKAGE="nvidia-driver"
+		elif [[ -n ${VERSIONS[999]} ]]; then
+			echo "Your card is only supported by the updated drivers from jessie-backports."
+			echo "See http://backports.debian.org for instructions how to use backports."
+			PACKAGE="nvidia-driver/jessie-backports"
 		elif [[ -n ${VERSIONS[304]} ]]; then
 			echo "Your card is only supported up to the 304 legacy drivers series."
 			PACKAGE="nvidia-legacy-304xx-driver"
@@ -163,6 +139,34 @@ fi
 		else
 			echo "Oops. Internal error 8 ($NVGA)"
 		fi
+	elif grep -q "stretch\|^9" /etc/debian_version
+	then
+		if [[ -n ${VERSIONS[999]} ]]; then
+			if [[ -n ${VERSIONS[340]} ]]; then
+				if [[ -n ${VERSIONS[304]} ]]; then
+				       	echo "Your card is supported by all driver versions."
+				else
+					echo "Your card is supported by the default drivers and legacy driver series 340."
+				fi
+			else
+				echo "Your card is supported by the default drivers."
+			fi
+			PACKAGE="nvidia-driver"
+		elif [[ -n ${VERSIONS[340]} ]]; then
+			echo "Your card is only supported up to the 340 legacy drivers series."
+			PACKAGE="nvidia-legacy-340xx-driver"
+		elif [[ -n ${VERSIONS[304]} ]]; then
+			echo "Your card is only supported up to the 304 legacy drivers series."
+			PACKAGE="nvidia-legacy-304xx-driver"
+		elif [[ -n ${VERSIONS[173]} ]]; then
+			echo "Uh oh. Your card is only supported by the 173.14 legacy drivers series, which is not in any current Debian suite."
+		elif [[ -n ${VERSIONS[96]} ]]; then
+			echo "Uh oh. Your card is only supported by the 96.43 legacy drivers series, which is not in any current Debian suite."
+		elif [[ -n ${VERSIONS[71]} ]]; then
+			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite."
+		else
+			echo "Oops. Internal error 9 ($NVGA)"
+		fi
 	else
 		echo "Uh oh. Failed to identify your Debian suite.";
 	fi;
@@ -171,4 +175,46 @@ if [ -n "$PACKAGE" ]; then
 	echo "It is recommended to install the"
 	echo "    $PACKAGE"
 	echo "package."
+fi
+
+}
+
+
+if [ -z "$1" ]; then
+
+	if ! (lspci --version) > /dev/null 2>&1; then
+		echo "ERROR: The 'lspci' command was not found. Please install the 'pciutils' package." >&2
+		exit 1
+	fi
+
+	NV_DEVICES=$(lspci -mn | awk '{ gsub("\"",""); if ($2 == "0300" && ($3 == "10de" || $3 == "12d2")) { print $1 } }')
+
+	if [ -z "$NV_DEVICES" ]; then
+		echo "No NVIDIA GPU detected."
+		exit 0
+	fi
+
+	echo "Detected NVIDIA GPUs:"
+	for d in $NV_DEVICES ; do
+		lspci -nn -s $d
+	done
+
+	for d in $NV_DEVICES ; do
+		echo -e "\nChecking card: $(lspci -s $d | awk -F: '{print $3}')"
+		NV_DETECT "$(lspci -mn -s "$d" | awk '{ gsub("\"",""); print $3 $4 }')"
+	done
+
+else
+
+	for id in "$@" ; do
+		PCIID=$(echo "$id" | sed -rn 's/^(10de)?:?([0-9a-fA-F]{4})$/10de\2/ip')
+		if [ -z "$PCIID" ]; then
+			echo "Error parsing PCI ID '$id'."
+			exit 1
+		fi
+
+		echo "Checking driver support for PCI ID [$(echo $PCIID | sed -r 's/(....)(....)/\1:\2/')]"
+		NV_DETECT "$PCIID"
+	done
+
 fi
