--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -10,8 +10,7 @@ Package: #NVIDIA#-kernel-#KVERS#
 Architecture: #ARCH_LIST#
 Provides: #NVIDIA#-kernel-#VERSION#
 Depends:
- nvidia-kernel-common (>= 20110213),
- #NVIDIA#-alternative--kmod-alias,
+ #NVIDIA#-kernel-support--v1,
 Recommends: linux-image-#KVERS#
 Built-Using: ${built:using:kernel}, ${built:using:nvidia}
 Description: NVIDIA binary kernel module for Linux #KVERS#
