update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@6404 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -2,6 +2,7 @@
 [i386]: binary-file-built-without-LFS-support
 binary-has-unneeded-section
 shlib-with-executable-stack
+[i386]: shlib-with-non-pic-code
 spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
