fail more clearly if a .run file is missing
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6412 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -90,7 +90,7 @@ prepare: autogen unpack-stamp nvidia.ids compare-copyright-license
 patch: prepare
 
 NVIDIA-Linux-%:
-	sh $(wildcard $*/${NVIDIA_FILENAME_$*} ${NVIDIA_FILENAME_$*}) --extract-only
+	sh $(firstword $(wildcard $*/${NVIDIA_FILENAME_$*}) ${NVIDIA_FILENAME_$*}) --extract-only
 	ln -s ${NVIDIA_DIRNAME_$*} $@
 	gunzip $@/*.1.gz
 
