update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@6445 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-driver-bin.lintian-overrides.in
+++ b/debian/nvidia-driver-bin.lintian-overrides.in
@@ -4,4 +4,4 @@ embedded-library usr/lib/#PRIVATE#/nvidia-debugdump: zlib
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-pie
-hardening-no-relro usr/lib/#PRIVATE#/nvidia-debugdump
+hardening-no-relro
