--- a/debian/rules
+++ b/debian/rules
@@ -40,7 +40,8 @@ nvidia_private		 = nvidia/$(current)
 
 CONTROL_PREFIXES	 = nvidia-driver libgl1-nvidia nvidia-kernel nvidia-alternative xserver-xorg-video-nvidia
 CONTROL_PREFIXES	+= nvidia-modprobe
-CONTROL_PREFIXES	+= libnvidia-eglcore libegl1-nvidia libgles1-nvidia libgles2-nvidia
+CONTROL_PREFIXES	+= libnvidia-eglcore libegl1-nvidia
+CONTROL_PREFIXES	+= libgles1-nvidia libgles2-nvidia
 CONTROL_PREFIXES	+= nvidia-vdpau-driver
 CONTROL_PREFIXES	+= libcuda1
 CONTROL_PREFIXES	+= nvidia-opencl-icd libnvidia-compiler
