Add patches to fix kernel module build failure on linux 4.3
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6458 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -12,3 +12,7 @@ use-nv-kernel-ARCH.o_shipped.patch
 include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
 arm-outer-sync.patch
+page-cache-release.patch
+#HAS_UVM#vm-fault-minor.patch
+#HAS_UVM#uvmnext-isr-top-half.patch
+rm_kernel_rmapi_op.patch
