--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -10,6 +10,7 @@ disable-cc_version_check.patch
 disable-xen_sanity_check.patch
 not-silent.patch
 use-nv-kernel-ARCH.o_shipped.patch
+page-cache-release.patch
 avoid-ld.gold.patch
 fix-typos.patch
 disable-mtrr.patch
