--- a/debian/control
+++ b/debian/control
@@ -99,7 +99,7 @@ Depends:
  libegl-${nvidia}0 (= ${binary:Version}),
  ${misc:Depends}
 Recommends:
- libgl1-${nvidia}-glx-i386 [amd64],
+ ${nvidia}-driver-libs-i386 [amd64],
  libopengl0-nvidia (= ${binary:Version}),
  libgles1-${nvidia} (= ${binary:Version}),
  libgles2-${nvidia} (= ${binary:Version}),
@@ -107,6 +107,20 @@ Description: NVIDIA metapackage (GL/GLX/EGL libraries)${nvidia:LegacyDesc}
  This metapackage depends on the NVIDIA binary libraries
  that provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
+
+#Package: ${nvidia}-driver-libs-i386
+Package: nvidia-driver-libs-i386
+Architecture: i386
+Multi-Arch: foreign
+Depends:
+ ${nvidia}-driver-libs,
+ ${misc:Depends}
+Conflicts:
+ libgl1-${nvidia}-glx-i386,
+Description: NVIDIA metapackage (GL/GLX/EGL 32-bit libraries)${nvidia:LegacyDesc}
+ This metapackage helps the automatic installation of the 32-bit NVIDIA
+ OpenGL/GLX/EGL libraries when installing ${nvidia}-driver-libs
+ on amd64 with foreign architecture i386 enabled.
 
 #Package: xserver-xorg-video-${nvidia}
 Package: xserver-xorg-video-nvidia
@@ -232,18 +246,6 @@ Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
  See the description of the ${nvidia}-driver package
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
-
-#Package: libgl1-${nvidia}-glx-i386
-Package: libgl1-nvidia-glx-i386
-Architecture: i386
-Multi-Arch: foreign
-Depends:
- libgl1-${nvidia}-glx,
- ${misc:Depends}
-Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
- This metapackage helps the automatic installation of the 32-bit NVIDIA
- OpenGL libraries when installing libgl1-${nvidia}-glx
- on amd64 with foreign architecture i386 enabled.
 
 Package: libegl1-glvnd-nvidia
 Architecture: i386 amd64 armhf
