update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@6485 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -14,3 +14,7 @@ embedded-library usr/lib*/libcuda.so.#VERSION#: zlib
 
 # libcudart.so.2 does dlopen("libcuda.so").
 non-dev-pkg-with-shlib-symlink
+
+# Package built with debhelper/wheezy but checked with lintian/sid.
+maintscript-calls-ldconfig
+package-must-activate-ldconfig-trigger
