--- a/debian/libgl1-nvidia-glx.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx.lintian-overrides.in
@@ -28,3 +28,7 @@ package-contains-empty-directory usr/lib/tls/
 # The legacy version is intended to be used with the legacy driver only.
 # Co-installability support is planned for jessie.
 breaks-without-version nvidia-settings-legacy-173xx
+
+# Package built with debhelper/wheezy but checked with lintian/sid.
+maintscript-calls-ldconfig
+package-must-activate-ldconfig-trigger
