update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-jessie@6490 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-opencl-icd.lintian-overrides.in
+++ b/debian/nvidia-opencl-icd.lintian-overrides.in
@@ -9,5 +9,5 @@ hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
-# Package built with debhelper/jessie but checked with lintian/sid.
+# Lintian and debhelper disagree w.r.t. a library in a private directory.
 maintscript-calls-ldconfig
