update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@6494 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-eglcore.lintian-overrides.in
+++ b/debian/libnvidia-eglcore.lintian-overrides.in
@@ -13,3 +13,7 @@ hardening-no-stackprotector
 # constant SONAME), so don't include the SONAME in the package name to
 # avoid going through NEW with every new upstream release.
 package-name-doesnt-match-sonames libnvidia-eglcore#VERSION# libnvidia-glsi#VERSION#
+
+# Package built with debhelper/jessie but checked with lintian/sid.
+maintscript-calls-ldconfig
+package-must-activate-ldconfig-trigger
