--- a/debian/libgles2-nvidia.lintian-overrides.in
+++ b/debian/libgles2-nvidia.lintian-overrides.in
@@ -9,6 +9,5 @@ hardening-no-stackprotector
 # the free version for Debian's purposes.
 symbols-declares-dependency-on-other-package libgles2-mesa
 
-# Lintian and debhelper disagree w.r.t a library in a private directory.
-postinst-has-useless-call-to-ldconfig
-postrm-has-useless-call-to-ldconfig
+# Lintian and debhelper disagree w.r.t. a library in a private directory.
+maintscript-calls-ldconfig
