Add get_user_page.patch to fix kernel module build failure on 4.6+
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6507 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -16,3 +16,4 @@ ignore_xen_on_arm.patch
 arm-outer-sync.patch
 #HAS_UVM#vm-fault-minor.patch
 #HAS_UVM#uvmnext-isr-top-half.patch
+get_user_page.patch
