--- a/debian/libgl1-nvidia-glx.symbols.in
+++ b/debian/libgl1-nvidia-glx.symbols.in
@@ -357,6 +357,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glCompressedTextureSubImage3D@Base 346
  glCompressedTextureSubImage3DEXT@Base 180
  glConservativeRasterParameterfNV@Base 352
+ (arch=armhf)glConservativeRasterParameteriNV@Base 367.18
  glConvolutionFilter1D@Base 1.0.4349
  (arch=!armhf)glConvolutionFilter1DEXT@Base 361.18
  glConvolutionFilter2D@Base 1.0.4349
@@ -593,7 +594,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glDrawElementsInstancedEXT@Base 1.0.9746
  glDrawElementsInstancedNV@Base 325
  (arch=!armhf)glDrawMeshArraysSUN@Base 361.18
- glDrawMeshNV@Base 1.0.4349
+ (arch=!armhf)glDrawMeshNV@Base 1.0.4349
  glDrawPixels@Base 1.0.4349
  (arch=!armhf)glDrawRangeElementArrayAPPLE@Base 361.18
  (arch=!armhf)glDrawRangeElementArrayATI@Base 361.18
