Rename new unpublished patches to match naming convention (- instead of _)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6522 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -6,6 +6,6 @@ nvidia-modeset-use-ARCH.o_binary.patch
 include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
 arm-outer-sync.patch
-nvidia_drm_arm_cflags.patch
-drm_mode_fb_cmd2.patch
-do_div_cast.patch
+nvidia-drm-arm-cflags.patch
+drm-mode-fb-cmd2.patch
+do-div-cast.patch
